# dto-common/src/main/java/com/mihenze/mscurse/dtocommon/rest/enums/PaymentStatus.java
@@ -4,5 +4,5 @@ import io.swagger.v3.oas.annotations.media.Schema;
 
 @Schema(description = "Статус оплаты", enumAsRef = true, name = "PaymentStatusEnum")
 public enum PaymentStatus {
-    PENDING, AUTHORIZED, CAPTURED, FAILED, CANCELLED, REFUNDED
+    PENDING, CONFIRM, FAILED, REFUNDED
 }
